--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,18 @@
 
 		<main>
 			<section class="dealer-side">
-				<p class="dealer-text">Dealer:<span class="dealer-score"></span></p>
+				<p class="dealer-text">
+					Dealer total:<span class="dealer-score">?</span>
+				</p>
 				<ul class="dealer-cards"></ul>
+				<p class="dealer-result-message"></p>
 			</section>
 			<section class="player-side">
-				<p class="player-text">Player:<span class="player-score"></span></p>
-				<ul class="player-cards">
-					<li><img src="images/10_of_clubs.svg" /></li>
-				</ul>
+				<p class="player-text">
+					Player total:<span class="player-score"></span>
+				</p>
+				<ul class="player-cards"></ul>
+				<p class="player-result-message"></p>
 			</section>
 			<section class="buttons">
 				<button class="hit">Hit</button>
