functioning reset button

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,26 @@
 		<main>
 			<section class="dealer-side">
 				<p class="dealer-text">
-					Dealer total:<span class="dealer-score">?</span>
+					Dealer total:<span class="dealer-score">??</span>
 				</p>
-				<ul class="dealer-cards"></ul>
+				<section class="dealer-cards-container">
+					<section class="dealer-cards">
+						<ul class="card-backs">
+							<img src="images/card_back.png" />
+							<img src="images/card_back.png" />
+						</ul>
+					</section>
+				</section>
 				<p class="dealer-result-message"></p>
 			</section>
+
 			<section class="player-side">
 				<p class="player-text">
 					Player total:<span class="player-score"></span>
 				</p>
-				<ul class="player-cards"></ul>
+				<section class="player-cards-container">
+					<ul class="player-cards"></ul>
+				</section>
 				<p class="player-result-message"></p>
 			</section>
 			<section class="buttons">
