Dealer Displays 1 card

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,9 @@
 					Dealer total:<span class="dealer-score">??</span>
 				</p>
 				<section class="dealer-cards-container">
-					<section class="dealer-cards">
-						<ul class="card-backs">
-							<img src="images/card_back.png" />
-							<img src="images/card_back.png" />
-						</ul>
+					<section class="dealer-cards"></section>
+					<section class="card-backs">
+						<img src="images/card_back.png" />
 					</section>
 				</section>
 				<p class="dealer-result-message"></p>
@@ -31,7 +29,7 @@
 					Player total:<span class="player-score"></span>
 				</p>
 				<section class="player-cards-container">
-					<ul class="player-cards"></ul>
+					<section class="player-cards"></section>
 				</section>
 				<p class="player-result-message"></p>
 			</section>
